--- a/src/app/gifs/components/card-list/card-list.component.html
+++ b/src/app/gifs/components/card-list/card-list.component.html
@@ -3,7 +3,7 @@
     <div class="card mb-2 text-center bg-dark">
       <img
         [src]="gif.images.downsized_medium.url"
-        [alt]="gif.title"
+        alt="{{ gif.title }}"
         class="card-img-top"
       />
       <div class="card-body text-white">
